Fixed UI Scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+body {
+  overflow-y: scroll; /* Show scrollbars */
+}
+
 main {
   min-height: 80vh;
 }
